--- a/css/screen.css
+++ b/css/screen.css
@@ -211,65 +211,87 @@ label {
 }
 
 body {
-  font-family: "Oswald",serif, sans-serif;
-  background-color: var(--grey);
+  font-family: "Oswald", serif, sans-serif;
+  background-color: var(--dark-grey);
   color: var(--black);
-  padding: 3em;
+  padding: 4em;
 }
 
 form {
-  max-width: 400px;
+  max-width: 500px;
   margin: 0 auto;
   background-color: var(--light-grey);
-  padding: 2em;
-  border-radius: 10px;
+  padding: 4em;
+  border-radius: 30px;
 }
 
 h1 {
   font-family: "Anton", sans-serif;
-  text-align: center;
-  margin-bottom: 1em;
+  color: var(--black);
+  font-size: 2em;
+  margin-bottom: 2em;
 }
 
 p {
-  text-align: center;
-  color: var(--grey);
-}
-
-input[type="email"],
-label[for="email"],
-input[type="checkbox"],
-label[for="age-verification"],
-input[type="submit"] {
-  width: 100%;
-  margin-bottom: 1em;
+  font-size: 1.2em;
+  color: var(--dark-grey);
+  padding:0 0 1em;
 }
 
 input[type="email"],
 input[type="checkbox"],
-input[type="submit"] {
-  padding: 1em;
-  border: none;
-  background-color: var(--light-grey);
-}
-
-label[for="email"],
 label[for="age-verification"] {
-  font-family: "Bebas Neue", sans-serif;
+    color: var(--white); 
+}
+
+label[for="email"]{
+  color: var(--dark-grey)
+}
+
+input[type="email"],
+input[type="checkbox"],
+input[type="submit"] {
+    background-color: var(--white);
+   
+}
+
+
+label[for="age-verification"] {
+    font-family: "Bebas Neue", sans-serif;
+    font-size: 0.8em;
 }
 
 input[type="submit"] {
-  background-color: var(--grey);
-  color: var(--white);
+    background-color: var(--white); 
+    color: var(--black); 
+    font-family: "Neuas Bebas", sans-serif;
 }
 
-/* Responsive Media */
+
 img, audio, video {
-  display: block;
-  max-width: 100%;
+    display: block;
+    max-width:100%;
 }
 
+ol {
+    display:flex;
+    flex-direction:column;
+    align-items:flex-start;
+}
 
+li {
+    display:flex;
+    align-items:center;
+    margin-bottom:1em;
+}
 
+label, input[type="email"], input[type="checkbox"] {
+    margin-right:1em;
+}
+
+input[type="email"] {
+    flex:1; 
+    color: var(--black)
+}
 
 /* ===== STATE STYLES ======= */
